# solar-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TASKS.md  docker-compose.yml  install.sh  plan.md  uninstall.sh
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  aggregator.py  config.py  control.py  dashboards.py  derived.py  derived_stats.py  economics.py  energy.py  grid_events.py  host_network.py  main.py  metrics.py  models.py  persistence.py  poller.py  settings_schema.py  stats.py  tariff.py  templating.py  version.py
backend/app/alerts/: __init__.py  channels.py  engine.py  service.py
backend/app/automation/: __init__.py  planner.py  rules.py  service.py
backend/tests/: conftest.py  test_aggregator.py  test_alert_api.py  test_alert_channels.py  test_alert_engine.py  test_alert_service.py  test_api.py  test_automation_api.py  test_automation_planner.py  test_automation_rules.py  test_automation_service.py  test_backup_export.py  test_clock.py  test_control.py  test_control_api.py  test_dashboards.py  test_derived.py  test_derived_stats.py  test_diagnostics.py  test_dummy.py  test_economics.py  test_energy.py  test_factory.py  test_firmware.py  test_forecast_api.py  test_forecast_battery.py  test_forecast_model.py  test_grid_events.py  test_history_api.py  test_host_network.py  test_modbus_rtu.py  test_modbus_tcp.py  test_mqtt.py  test_openmeteo.py  test_packaging.py  test_persistence.py  test_preferences.py  test_readings_webhook.py  test_registry.py  test_sa_mqtt.py  (+9 more)
(+144 files in other folders)
